@@ -24,11 +24,24 @@
 #include <nxevent.h>
 
 /**
- * Upgrade from 22.37 to 30.0
+ * Upgrade from 22.38 to 30.0
+ */
+static bool H_UpgradeFromV38()
+{
+   CHK_EXEC(SetMajorSchemaVersion(30, 0));
+   return true;
+}
+
+/**
+ * Upgrade from 22.37 to 22.38
  */
 static bool H_UpgradeFromV37()
 {
-   CHK_EXEC(SetMajorSchemaVersion(30, 0));
+   CHK_EXEC(CreateEventTemplate(EVENT_SERVER_STARTED, _T("SYS_SERVER_STARTED"), SEVERITY_NORMAL, EF_LOG, _T("32f3305b-1c1b-4597-9eb5-b74eca54330d"),
+            _T("Server started"),
+            _T("Generated when server initialization is completed.")
+            ));
+   CHK_EXEC(SetMinorSchemaVersion(38));
    return true;
 }
 
@@ -739,7 +752,8 @@ static struct
    bool (* upgradeProc)();
 } s_dbUpgradeMap[] =
 {
-   { 37, 30, 0,  H_UpgradeFromV37 },
+   { 38, 30, 0,  H_UpgradeFromV38 },
+   { 37, 22, 38, H_UpgradeFromV37 },
    { 36, 22, 37, H_UpgradeFromV36 },
    { 35, 22, 36, H_UpgradeFromV35 },
    { 34, 22, 35, H_UpgradeFromV34 },
